// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button.styles Container DEVE ser igual ao snapshot 1`] = `
.c0 {
  margin: 15px;
}

<div
  className="c0"
/>
`;

exports[`Button.styles ContainerButton DEVE ser igual ao snapshot 1`] = `
.c0 {
  background-color: #3D9DB3;
  border-radius: 8px;
  border-style: none;
  padding: 8px 60px;
  cursor: pointer;
}

<button
  className="c0"
/>
`;

exports[`Button.styles ContainerButton DEVE ser igual ao snapshot QUANDO o tipo for "cancelar" 1`] = `
.c0 {
  background-color: #545d6a;
  border-radius: 8px;
  border-style: none;
  padding: 8px 60px;
  cursor: pointer;
}

<button
  className="c0"
/>
`;

exports[`Button.styles ContainerButton DEVE ser igual ao snapshot QUANDO o tipo for "confirmar" 1`] = `
.c0 {
  background-color: #545d6a;
  border-radius: 8px;
  border-style: none;
  padding: 8px 60px;
  cursor: pointer;
}

<button
  className="c0"
/>
`;

exports[`Button.styles ContainerButton DEVE ser igual ao snapshot QUANDO o tipo for "fechar" 1`] = `
.c0 {
  background-color: transparent;
  border-radius: none;
  border-style: none;
  padding: none;
  cursor: pointer;
}

<button
  className="c0"
/>
`;

exports[`Button.styles ContainerButton DEVE ser igual ao snapshot QUANDO o tipo for "ok" 1`] = `
.c0 {
  background-color: #545d6a;
  border-radius: 8px;
  border-style: none;
  padding: 8px 60px;
  cursor: pointer;
}

<button
  className="c0"
/>
`;

exports[`Button.styles ContainerButton DEVE ser igual ao snapshot QUANDO o tipo for "submit" 1`] = `
.c0 {
  background-color: #3D9DB3;
  border-radius: 8px;
  border-style: none;
  padding: 8px 60px;
  cursor: pointer;
}

<button
  className="c0"
/>
`;
